--- a/src/app/ventas/ventas.component.html
+++ b/src/app/ventas/ventas.component.html
@@ -25,7 +25,7 @@
   </ng-container>
   <ng-container matColumnDef="fechaVenta">
     <th mat-header-cell *matHeaderCellDef>Fecha</th>
-    <td mat-cell *matCellDef="let v">{{v.fechaVenta | date:'shortDate'}}</td>
+    <td mat-cell *matCellDef="let v">{{v.fechaVenta | date:'short'}}</td>
   </ng-container>
   <ng-container matColumnDef="total">
     <th mat-header-cell *matHeaderCellDef>Total</th>
